svenson json library change log:
================================

Changes from 1.3.5 to 1.3.6:

 * Support Set and Collection for JSONTypeHint. Intermediary list in JSON parser gets converted to HashSet. added Set => HashSet as known interface impl.
 * Support all standard JDK set implementation for @JSONTypeHint
 * Find best replacement interface, instead of taking the first possible. Fixes broken replacement interface behaviour
 * Add Array support
 * Properly regard initial type mapping to enable SubType-Matched parsing from JSON root
 * Svenson no longer reads ignored properties. 

Changes from 1.3.4 to 1.3.5:

 * add support for non-annotation based TypeConversion. See org.svenson.JSON.registerTypeConversion(Class<?>, TypeConverter) and org.svenson.JSONParser.registerTypeConversion(Class, TypeConverter)
 * add SinkAwareJSONifier for sink based JSONifying
 * add default ignore properties. See org.svenson.JSON.setIgnoredProperties(Collection<String>)
 * change List<String> ignoredProps to Collection<String> ignoredProps to enable using Set<String> but keep source compatibility. 

Changes from 1.3.3 to 1.3.4:
 * Add a copy constructor to JSONParser that creates a copy of the JSONParser with the same config. Fixes serious bug in jcouchdb and other use cases.

Changes from 1.3.2 to 1.3.3:
 * added JSONConfig to represent both a parser and a generator config.
 * enable path matching based on previous type hint, add sub type matcher
 * took over common-beanutil-1.8 depedency from jcouchdb, refactored type conversion, Fixes Issue #5.

Changes from 1.3.1 to 1.3.2:
 * now uses slf4j as logging API
 * now available via Maven
 * support for interface based JSONifiers

Changes from 1.3.0 to 1.3.1:
 * support for streaming output 
 * added ClassNameBasedTypeMapper
 * added @JSONConverter annotation allowing you to convert bean properties
 * added PathMatcher to flexibilize type hints and type mappers.
   This feature was sponsored by QuinScape ( http://quinscape.de )