@@ -1,1 +1,1 @@
-project.version=1.3.7-dev
+project.version=1.3.7
