@@ -6,7 +6,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.google.code.svenson</groupId>
     <artifactId>svenson</artifactId>
-    <version>1.3.6</version>
+    <version>1.3.7</version>
     <name>svenson</name>
     <packaging>jar</packaging>
     <description>Java5 JSON parser/generator</description>
